# TamaOd

./: .dockerignore  .env.example  .env.template  .gitignore  .npmrc  DEPLOYMENT.md  Dockerfile  ENV.md  OPENSHIFT_DEPLOYMENT.md  README.md  SECURITY.md  build-and-push.sh  db.sqlite3  env.prod.template  manage.py  nginx.conf  package.json  pyproject.toml  pytest.ini  supervisord.conf  testing.py  webpack.config.js
.github/workflows/: static-analysis.yml
TamaOd/: asgi.py  settings.py  wsgi.py
api/: app_state.py  apps.py  services.py  settings.py  urls.py  views.py
api/data/: streets.json
api/services/: __init__.py  base.py  mock-service.py  mock.py  real-service.py  real.py  services.py  test_general.py  test_real_services.py
deploy/: Dockerfile  build-and-push.sh  docker-entrypoint.sh  nginx-ssl.conf  nginx.conf  run-gunicorn.sh  supervisord.conf
scripts/: build-js.sh  generate_ssl_cert.sh  runserver_local.sh
tamaod/: asgi.py  settings.py  urls.py  wsgi.py
tests/: README.md  test_general.py  test_real_services.py  test_security.py
ui/: urls.py  views.py
ui/static/css/: styles.css
ui/static/js/: script.js
ui/templates/: index.html
