[project]
name = "TamaOd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Elai Shalev", email = "eshalev@redhat.com"},
]
dependencies = ["django>=5.1.6", "requests>=2.32.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
lint-check = "ruff check --config ./pyproject.toml ."
lint-fix = "ruff check --config ./pyproject.toml . --fix"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "bandit>=1.8.3",
    "ruff>=0.9.6",
]

[tool.ruff]
ignore = ["RUF001"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "F", # pyflakes
    "FA", # flake8-future-annotations
    "G", # flake8-logging-format
    "N", # pep8-naming
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PGH", # pygrep-hooks
    "PTH", # flake8-pathlib
    "RET", # flake8-return
    "RUF", # ruff
    "SIM", # flake8-simplify
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

